--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Entre as nuvens</title>
 </head>
 <body>
-    <div class="cabeçalho"></div>
+    <div class="cabeçalho"> 
+        <img src="" alt="">
+    </div>
     <div class="corpo"></div>
     <div class="fim"></div> 
 </body>
