--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="cabeçalho"> 
-        <img src="" alt="">
+        <img class="cabeçalho-img" src="sorvet-removebg-preview.png" alt="">
     </div>
     <div class="corpo"></div>
     <div class="fim"></div> 
