--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <img class="cabeçalho-img" src="sorvet-removebg-preview.png" alt="">
     </div>
     <div class="corpo"></div>
-    <div class="fim"></div> 
+    <div class="fim">
+        <p class="mundo">O mundo fica mais gostoso com um peacinho do ceú</p>
+    </div> 
 </body>
 </html>
