--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="estilo.css" media="screen">
+    <link rel="shortcut icon" href="1000022031-removebg-preview.png" type="image/x-icon">
     <title>Entre as nuvens</title>
 </head>
 <body>
