--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="corpo"></div>
     <div class="fim">
         <p class="mundo">O mundo fica mais gostoso com um peacinho do ceú</p>
+        <p class="sorvete">Sorvete Céu azul</p>
     </div> 
 </body>
 </html>
