--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="fim">
         <p class="mundo">O mundo fica mais gostoso com um peacinho do ceú</p>
         <p class="sorvete">Sorvete Céu azul</p>
+        <p class="rua">Av. Santarelli Correia
+            Bairro Colina Verde</p>
     </div> 
 </body>
 </html>
