--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p class="mundo">O mundo fica mais gostoso com um peacinho do ceú</p>
         <p class="sorvete">Sorvete Céu azul</p>
         <p class="rua">Av. Santarelli Correia <br> Bairro Colina Verde</p>
+        <p class="contato">Entre em Contato</p>
     </div> 
 </body>
 </html>
