--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="cabeçalho"> 
         <img class="cabeçalho-img" src="sorvet-removebg-preview.png" alt="">
     </div>
-    <div class="corpo"></div>
+    <div class="corpo">
+        <img class="corpo-img" src="1000022031-removebg-preview.png" alt="">
+    </div>
     <div class="fim">
         <p class="mundo">O mundo fica mais gostoso com um peacinho do ceú</p>
         <p class="sorvete">Sorvete Céu azul</p>
