--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p class="sorvete">Sorvete Céu azul</p>
         <p class="rua">Av. Santarelli Correia <br> Bairro Colina Verde</p>
         <p class="contato">Entre em Contato</p>
+        <p class="numero">44 999456789</p>
     </div> 
 </body>
 </html>
