--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p class="rua">Av. Santarelli Correia <br> Bairro Colina Verde</p>
         <p class="contato">Entre em Contato</p>
         <p class="numero">44 999456789</p>
+        <img class="fim-img" src="download.jpeg" alt="">
     </div> 
 </body>
 </html>
